# FileInSight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Security.md
src/: main.cpp
src/UI/: UI.cpp  UI.h
src/analyzer/: EntropyAnalyzer.cpp  EntropyAnalyzer.h  FileAnalyzer.cpp  FileAnalyzer.h  MagicByteAnalyzer.cpp  MagicByteAnalyzer.h  PathAnalyzer.cpp  PathAnalyzer.h
src/api/: API.cpp  API.h  executor.cpp  executor.h
src/cli/: CLIParser.cpp  CLIParser.h
src/compression/: AbstractCompressor.cpp  AbstractCompressor.h  HuffmanCompressor.cpp  HuffmanCompressor.h  HuffmanTree.cpp  HuffmanTree.h  zstdCompression.cpp  zstdCompression.h  zstdCompressor.cpp  zstdCompressor.h
src/config/: Settings.cpp  Settings.h
src/container/: VaultManager.cpp  VaultManager.h
src/core/: FileCollecter.cpp  FileCollecter.h
src/finder/: AbstractFinder.h  AgingFileFinder.cpp  AgingFileFinder.h  DuplicateFinder.cpp  DuplicateFinder.h  RegExFinder.cpp  RegExFinder.h  SimilarityFinder.cpp  SimilarityFinder.h
src/hashing/: FuzzyHasher.cpp  FuzzyHasher.h  Hasher.cpp  Hasher.h
src/models/: ExtFileInfo.h  FileInfo.h  FileSignature.h  RecoveredFile.h  semantic_info.h
src/semantic/: embedding_generator.cpp  embedding_generator.h  semanticDB.h
src/steganography/: AESEncryptor.cpp  AESEncryptor.h  AbstractEncryptor.cpp  AbstractEncryptor.h  XOREncryptor.cpp  XOREncryptor.h
src/steganography/forensics/: RawRecoveryScanner.cpp  RawRecoveryScanner.h
src/tests/: TestCompression.cpp  TestEncryption.cpp  TestRecovery.cpp  test_main.cpp
